--- a/index.html
+++ b/index.html
@@ -288,13 +288,14 @@
             </div>
         </div>
         <div class="credit">
-            <p>&copy copyright  2024 by <span>srikanth | web developer</span><br>All rights reserved. <br>Privacy policy | Terms & conditions</p>
+            <p>&copy copyright  2024 by <span><a href="https://portfoliosrikanth.netlify.app" target="_blank">srikanth | web developer</a></span><br>All rights reserved. <br>Privacy policy | Terms & conditions</p>
             <div class="icons" id="icons">
                 <a href="https://www.linkedin.com/in/srikanth-s-aa7a67270?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
                 <a href="https://github.com/srikanth3608" target="_blank"><i class="fab fa-github" aria-hidden="true"></i></a>
                 <a href="https://www.facebook.com/profile.php?id=100036920080630&mibextid=ZbWKwL" target="_blank"><i class="fab fa-facebook" aria-hidden="true"></i></a>
                 <a href="https://www.instagram.com/_srikanth_s_sri_/" target="_blank"><i class="fab fa-instagram" aria-hidden="true"></i></a>
                 <a href="https://x.com/Srikanth_s_sri?t=SH61_fQTAzOqILrEr7bNMg&s=09" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="https://wa.me/9585930984" target="_blank"><i class="fab fa-whatsapp" aria-hidden="true"></i></a>
             </div>
         </div>
     </footer>
